4-Deploy-App/kyverno/policies/disallow-privileged-containers.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-privileged-containers
  annotations:
    policies.kyverno.io/title: Disallow privileged containers
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
spec:
  validationActions:
    - Audit
  evaluation:
    background:
      enabled: false
  matchConstraints:
    resourceRules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods
  matchConditions:
    - name: application-namespaces
      expression: object.metadata.namespace in ['staging', 'production']
  validations:
    - message: Privileged containers are not allowed.
      expression: >-
        object.spec.containers.all(container,
          !container.?securityContext.?privileged.orValue(false)
        ) &&
        object.spec.?initContainers.orValue([]).all(container,
          !container.?securityContext.?privileged.orValue(false)
        ) &&
        object.spec.?ephemeralContainers.orValue([]).all(container,
          !container.?securityContext.?privileged.orValue(false)
        )
